--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Jinja2==3.1.5
 MarkupSafe==3.0.2
 msgspec==0.19.0
 packaging==24.2
-SQLAlchemy==2.0.36
+Flask-SQLAlchemy==3.1.1
 sqlparse==0.5.3
 termcolor==2.5.0
 typing_extensions==4.12.2
