--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 blinker==1.9.0
 cachelib==0.13.0
+cachetools==5.5.2
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
@@ -8,19 +9,32 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.69.2
 greenlet==3.1.1
+httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 msgspec==0.19.0
 packaging==24.2
+proto-plus==1.26.1
+protobuf==6.30.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyparsing==3.2.3
 python-dotenv==1.0.1
 requests==2.32.3
+rsa==4.9
 SQLAlchemy==2.0.37
 sqlparse==0.5.3
 termcolor==2.5.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.3.0
 Werkzeug==3.1.3
 wheel==0.45.1
